





import java.util.List;
import java.util.ArrayList;

public class PetriNets_Node extends Object {

    private String name;



    public PetriNets_Node(
        String name    ) {
        super(
        );
        this.name = name;
    }


    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }


}