





import java.util.List;
import java.util.ArrayList;

public class PetriNets_Object  {






    private PetriNets_PetriNet petrinets_petrinet;


    public PetriNets_Object(
    ) {
    }



    public PetriNets_PetriNet getPetrinets_petrinet() {
        return petrinets_petrinet;
    }

    public void setPetrinets_petrinet(PetriNets_PetriNet petrinets_petrinet) {
        this.petrinets_petrinet = petrinets_petrinet;
    }

}