





import java.util.List;
import java.util.ArrayList;

public class PetriNets_Token  {






    private PetriNets_Place petrinets_place;


    public PetriNets_Token(
    ) {
    }



    public PetriNets_Place getPetrinets_place() {
        return petrinets_place;
    }

    public void setPetrinets_place(PetriNets_Place petrinets_place) {
        this.petrinets_place = petrinets_place;
    }

}