





import java.util.List;
import java.util.ArrayList;

public class PetriNets_Transition extends Node {




    public PetriNets_Transition(
    ) {
        super(
        );
    }




}